# nit

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  REPO_HEALTH.md  SECURITY.md  TODO_SECURITY.md  deny.toml  games.toml  install.ps1  install.sh  justfile
crates/nit/: Cargo.toml
crates/nit-core/: Cargo.toml
crates/nit-core/src/: actions.rs  agent_bus.rs  agent_error_summary.rs  buffer.rs  config.rs  cursor.rs  genome_report.rs  genome_report_cache.rs  genome_storage.rs  gol_rules.rs  io.rs  lab.rs  languages.rs  lib.rs  metabolism.rs  mission_memory.rs  mode.rs  mood.rs  pane.rs  prompt.rs  rule_config.rs  rule_protocol.rs  search.rs  seed.rs  state.rs  substrate.rs  test_helpers.rs  viewport.rs
crates/nit-core/src/agent_bus/: async_queue.rs  claims_signals.rs  file_ops.rs  helpers.rs  mod.rs  mood_control.rs  token_count.rs  turn_completion.rs  turn_error.rs  turn_lifecycle.rs  upsert.rs
crates/nit-core/src/arbiters/: help_needed.rs  mod.rs  persistent_conflict.rs  sparse_plan_arbiter.rs
crates/nit-core/src/buffer/: brackets.rs  cursor_motion.rs  diff.rs  edit.rs  edit_tracking.rs  indent.rs  jumplist.rs  mod.rs  repr.rs  scroll.rs  search.rs  selection.rs  types.rs  undo.rs  undo_log.rs
crates/nit-core/src/config/: editor.rs  genome.rs  gol.rs  highlight.rs  mod.rs  power.rs  settings.rs  swarm.rs
crates/nit-core/src/genome_report/: format.rs  function_scores.rs  instructions.rs  outlier.rs  parsimony.rs  recommendations.rs  simulation.rs  source_scan.rs
crates/nit-core/src/genome_storage/: cache.rs  errors.rs  migrations.rs  schema.rs
crates/nit-core/src/mission_memory/: index.rs  io.rs  mod.rs  search.rs
crates/nit-core/src/observers/: global_heat.rs  mod.rs  repeat_failure.rs  sparse_plan.rs
crates/nit-core/src/rule_config/: load.rs  parse_rules.rs  persist.rs  toml_io.rs
crates/nit-core/src/rule_protocol/: parse.rs  presets.rs  types.rs
crates/nit-core/src/seed/: grid_types.rs  mod.rs  params.rs  utils.rs  view_modes.rs
crates/nit-core/src/state/: action_apply.rs  agent_types.rs  agents_state.rs  cmd_line.rs  defaults.rs  family_run.rs  file_tree.rs  games.rs  jumplist.rs  multipane.rs  pickers.rs  text_input.rs  visualizer.rs
crates/nit-core/src/substrate/: assumptions.rs  claims.rs  mod.rs  signals.rs
crates/nit-core/src/tests/: agent_bus.rs  arbiters.rs  buffer.rs  config.rs  genome_adversarial.rs  genome_check.rs  genome_function_scores.rs  genome_parsimony.rs  genome_proptest.rs  genome_report.rs  genome_storage.rs  genome_storage_gc.rs  metabolism.rs  mission_memory.rs  mod.rs  mood.rs  multipane.rs  observers.rs  rule_config.rs  rule_protocol.rs  seed.rs  state.rs  substrate.rs  vim_semantics.rs
crates/nit-games/: Cargo.toml
crates/nit-games/benches/: engine_bench.rs
crates/nit-games/benches/shared/: common.rs
crates/nit-games/src/: analysis.rs  config.rs  events.rs  fast_eval.rs  fsm_enum.rs  game.rs  history.rs  history_log.rs  introspection.rs  lib.rs  ndjson.rs  output.rs  strategy.rs  tests.rs  tournament.rs
crates/nit-games/src/analysis/: csv.rs  mod.rs  summarize.rs  trajectory.rs
crates/nit-games/src/config/: mod.rs  normalize.rs  payoff.rs  strategy_parse.rs  types.rs
crates/nit-games/src/fsm_enum/: behavior_trace.rs  cache.rs  canonical.rs  minimize.rs  mod.rs
crates/nit-games/src/strategy/: ca.rs  fsm.rs  math.rs  mod.rs  tm.rs  wolfram_codec.rs
crates/nit-games/src/test_modules/: config_parsing.rs  fast_eval.rs  history_log.rs  metal.rs  shared.rs  strategies_ca.rs  strategies_fsm.rs  strategies_tm.rs  tournament_aggregation.rs  tournament_halting.rs  tournament_metal.rs  tournament_metal_data.rs  tournament_progress.rs  tournament_reference.rs  tournament_reference_data.rs
crates/nit-games/src/tournament/: accumulator.rs  halting.rs  kernel.rs  metal.rs  mod.rs  runner.rs  schedule.rs  session.rs  types.rs
crates/nit-gol/: Cargo.toml
crates/nit-gol/assets/: rules.toml
crates/nit-gol/src/: analyze.rs  attractor.rs  catalog.rs  grid.rs  hash.rs  lib.rs  rle.rs  rule.rs  snapshot.rs  snapshot_manager.rs  step.rs  tests.rs
crates/nit-gol/src/attractor/: detector.rs  fingerprint.rs  mod.rs
crates/nit-gol/src/catalog/: helpers.rs  mod.rs  overlay.rs  types.rs
crates/nit-gol/src/snapshot_manager/: bits.rs  dedup.rs  manager.rs  mod.rs  rule_log.rs  types.rs  worker.rs
crates/nit-gol/src/test_modules/: attractor.rs  catalog.rs  parsing_evolution.rs  snapshot_manager.rs
crates/nit-mcp/: Cargo.toml
crates/nit-mcp/src/: backchannel.rs  jsonrpc.rs  lib.rs  main.rs  protocol.rs  server.rs  tools.rs  tools_schema.json
crates/nit-mcp/tests/: discovery.rs  tools_call.rs
crates/nit-mcp/tests/common/: mod.rs
crates/nit-metal/: Cargo.toml
crates/nit-metal/src/: batch_eval.metal  lib.rs  macos.rs  stubs.rs  types.rs
crates/nit-metal/src/macos/: cache.rs  device.rs  dispatch.rs  mod.rs  policy.rs  shader.rs
crates/nit-syntax/: Cargo.toml
crates/nit-syntax/src/: captures.rs  classification.rs  debounce.rs  engine.rs  highlight.rs  lib.rs  registry.rs  tests.rs  tree_sitter_engine.rs
crates/nit-tui/: Cargo.toml
crates/nit-tui/src/: app.rs  claude_pool.rs  claude_runner.rs  codex_runner.rs  compile_gate_worker.rs  file_tree.rs  file_tree_runner.rs  file_watcher.rs  fuzzy_preview_runner.rs  fuzzy_search_runner.rs  games_analysis.rs  games_petri_dish.rs  games_runner.rs  games_runs.rs  genome_worker.rs  intake.rs  layout.rs  lib.rs  mcp_backchannel.rs  petri_dish.rs  power.rs  pty.rs  seed_runtime.rs  seed_snapshot.rs  shadow.rs  shell_cwd.rs  swarm.rs  syntax.rs  system_stats.rs  theme.rs  visualizer.rs  vitals.rs  workspace_scan.rs
crates/nit-tui/tests/: planner_validator.rs
crates/nit-utils/: Cargo.toml
crates/nit-utils/src/: debounce.rs  fs.rs  hashing.rs  lib.rs  paths.rs  rng.rs  time.rs
crates/nit-utils/tests/: fs_tests.rs  hashing_tests.rs  lib_tests.rs  paths_tests.rs  rng_tests.rs  time_tests.rs
crates/nit/src/: agents.rs  bootstrap.rs  cli.rs  games.rs  graph.rs  logging.rs  main.rs  multipane_setup.rs  update.rs  workspace.rs
(+514 files in other folders)
