[workspace]
members = [
    "crates/nit",
    "crates/nit-core",
    "crates/nit-games",
    "crates/nit-metal",
    "crates/nit-gol",
    "crates/nit-syntax",
    "crates/nit-tui",
    "crates/nit-utils",
]
default-members = ["crates/nit"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["nit contributors"]
rust-version = "1.88.0"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
directories = "5.0"
ratatui = { version = "0.26", default-features = false, features = ["crossterm", "serde"] }
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.11"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter", "time"] }
crossbeam-channel = "0.5"
unicode-segmentation = "1.10"
unicode-width = "0.1"
sysinfo = "0.29.11"
rayon = "1.10"
criterion = "0.8"

[profile.release]
debug = true
lto = "thin"

[patch.crates-io]
time = { path = "vendor/time" }
