[package]
name = "nit-core"
version = "0.1.0"
description = "Core state, agent bus protocol, configuration, and text buffers for the nit workspace"
edition = "2021"
license = "MIT"
rust-version.workspace = true

[dependencies]
ropey = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
blake3 = { workspace = true }
nit-utils = { path = "../nit-utils" }
nit-gol = { path = "../nit-gol" }
nit-games = { path = "../nit-games" }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-python = "0.20.4"
tree-sitter-javascript = "0.20.4"
tree-sitter-typescript = "0.20.5"
tree-sitter-markdown-fork = "0.7.3"
tree-sitter-html = "0.23.0"
tree-sitter-css = "0.20.0"
tree-sitter-json = "0.20.2"
tree-sitter-toml = "0.20.0"
tree-sitter-yaml = "0.0.1"
tree-sitter-bash = "0.20.3"
toml = { workspace = true }
