[package]
name = "nit-core"
version = "0.1.0"
description = "Core state, agent bus protocol, configuration, and text buffers for the nit workspace"
edition = "2021"
license = "MIT"
rust-version.workspace = true

[dependencies]
ropey = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# serde_json drives the on-disk swarm artifact tree consumed by
# `mission_memory` — format decision is recorded in
# docs/SWARM.md "Serialization format" (do not swap to a binary format).
serde_json = { workspace = true }
# `blake3` powers `nit_utils::hashing::stable_hash_bytes`, used by the
# genome report cache for shard selection and the collision-suffix on
# encoded report filenames (see `genome_storage::schema`).
blake3 = { workspace = true }
# `nit-utils` provides `fs::write_atomic` (tmp+fsync+rename) — required by
# the genome report cache to avoid the half-write hole that a crash
# mid-persist would otherwise leave behind.
nit-utils = { path = "../nit-utils" }
nit-gol = { path = "../nit-gol" }
nit-games = { path = "../nit-games" }
toml = { workspace = true }

# Tree-sitter parsers (used by the seed encoders + genome report AST analysis).
# Versions pinned for reproducibility; CI uses --locked.
tree-sitter = "0.20.10"
tree-sitter-bash = "0.20.3"
tree-sitter-css = "0.20.0"
tree-sitter-html = "0.19.0"
tree-sitter-javascript = "0.20.4"
tree-sitter-json = "0.20.2"
tree-sitter-markdown-fork = "0.7.3"
tree-sitter-python = "0.20.4"
tree-sitter-rust = "0.20.4"
tree-sitter-toml = "0.20.0"
tree-sitter-typescript = "0.20.5"
tree-sitter-yaml = "0.0.1"
