[package]
name = "nit-games"
version = "0.1.0"
description = "Game theory tournament engine with configurable strategies, payoff matrices, and analysis"
edition = "2021"
license = "MIT"
publish = false
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
time = { workspace = true, features = ["formatting"] }
nit-utils = { path = "../nit-utils" }
nit-metal = { path = "../nit-metal" }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "engine_bench"
harness = false
