[package]
name = "nit-games"
version = "0.1.0"
description = "Game-theory tournament engine: strategies, payoff matrices, and analysis"
edition = "2021"
license = "MIT"
publish = false
rust-version.workspace = true

[dependencies]
nit-metal = { path = "../nit-metal" }
nit-utils = { path = "../nit-utils" }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting"] }
toml = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "engine_bench"
harness = false
