[package]
name = "nit-games"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "Game-theory tournament engine: strategies, payoff matrices, and analysis"
license = "MIT"
publish = false

[dependencies]
nit-metal = { path = "../nit-metal" }
nit-utils = { path = "../nit-utils" }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting"] }
toml = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "engine_bench"
harness = false
