[package]
name = "nit-gol"
version = "0.1.0"
description = "Game of Life simulation with rule parsing, seed generation, and grid evolution"
edition = "2021"
license = "MIT"
rust-version.workspace = true

[dependencies]
blake3 = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting"] }
tracing = { workspace = true }
toml = { workspace = true }
nit-utils = { path = "../nit-utils" }
