[package]
name = "nit-gol"
version = "0.1.0"
description = "Game of Life engine: rule catalog, grid evolution, attractor detection, scored rule evaluation, and durable RLE snapshots."
edition = "2021"
license = "MIT"
rust-version.workspace = true
categories = ["simulation", "science"]
keywords = ["cellular-automata", "game-of-life", "simulation"]

[dependencies]
blake3 = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting"] }
toml = { workspace = true }
tracing = { workspace = true }

# Internal path dependency — shared filesystem, hashing, and path helpers.
nit-utils = { path = "../nit-utils" }
