[package]
name = "nit-mcp"
version = "0.1.0"
description = "MCP stdio JSON-RPC server exposing nit substrate tools (emit_signal, assert_claim, assert_assumption)."
edition = "2021"
license = "MIT"
rust-version.workspace = true

[lib]
name = "nit_mcp"
path = "src/lib.rs"

[[bin]]
name = "nit-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
nit-core = { path = "../nit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
