[package]
name = "nit-metal"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version.workspace = true

[dependencies]
nit-utils = { path = "../nit-utils" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27.0"
