[package]
name = "nit-metal"
version = "0.1.0"
description = "Metal GPU acceleration for compute-intensive operations (macOS only)"
edition = "2021"
license = "MIT"
publish = false
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27.0"
nit-utils = { path = "../nit-utils" }
serde_json = { workspace = true }
