[package]
name = "nit-syntax"
version = "0.1.0"
description = "Syntax highlighting engine using tree-sitter grammars"
edition = "2021"
license = "MIT"
rust-version.workspace = true

[dependencies]
nit-core = { path = "../nit-core" }
anyhow = { workspace = true }
tree-sitter = "0.20.10"
tree-sitter-highlight = "0.20.1"
tree-sitter-rust = "0.20.4"
tree-sitter-python = "0.20.4"
tree-sitter-javascript = "0.20.4"
tree-sitter-typescript = "0.20.5"
tree-sitter-markdown-fork = "0.7.3"
tree-sitter-html = "0.23.0"
tree-sitter-css = "0.20.0"
tree-sitter-json = "0.20.2"
tree-sitter-toml = "0.20.0"
tree-sitter-yaml = "0.0.1"
tree-sitter-bash = "0.20.3"
tracing = { workspace = true }
