[package]
name = "nit-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
nit-core = { path = "../nit-core" }
nit-games = { path = "../nit-games" }
nit-gol = { path = "../nit-gol" }
nit-syntax = { path = "../nit-syntax" }
nit-utils = { path = "../nit-utils" }
unicode-width = { workspace = true }
sysinfo = { workspace = true }
arboard = "3.2"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27.0"
