[package]
name = "nit-tui"
version = "0.1.0"
description = "TUI application: event loop, widgets, agent runners, swarm orchestration, and game simulation UI"
edition = "2021"
license = "MIT"
rust-version.workspace = true

[dependencies]
# Terminal + rendering
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }

# Serialization, logging, channels
serde = { workspace = true, features = ["derive"] }
# serde_json writes `.nit/swarm/<id>/{run,summary,tasks,gates/report}.json`
# (pretty-printed). Format decision: docs/SWARM.md "Serialization format".
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
time = { workspace = true }
sysinfo = { workspace = true }

# Internal crates
nit-core = { path = "../nit-core" }
nit-games = { path = "../nit-games" }
nit-mcp = { path = "../nit-mcp" }
nit-metal = { path = "../nit-metal" }
nit-gol = { path = "../nit-gol" }
nit-syntax = { path = "../nit-syntax" }
nit-utils = { path = "../nit-utils" }

# Platform / misc (kept outside workspace pins intentionally)
arboard = "3.2"
ctrlc = "3.4"

[target.'cfg(unix)'.dependencies]
rlimit = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27.0"
