[package]
name = "nit-utils"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "Atomic filesystem writes, stable hashing, and project paths for the nit workspace"
license = "MIT"
publish = false

[dependencies]
blake3 = { workspace = true }
directories = { workspace = true }
