[package]
name = "nit-utils"
version = "0.1.0"
description = "Atomic filesystem writes, stable hashing, and project paths for the nit workspace"
edition = "2021"
license = "MIT"
rust-version.workspace = true
publish = false

[dependencies]
blake3 = { workspace = true }
directories = { workspace = true }
