[package]
name = "nit"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nit-core = { path = "../nit-core" }
nit-tui = { path = "../nit-tui" }
nit-utils = { path = "../nit-utils" }
nit-games = { path = "../nit-games" }
serde_json = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
