[package]
name = "nit"
version = "0.1.0"
description = "Terminal-native AI agent orchestrator with TUI"
edition = "2021"
license = "MIT"
publish = false
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

nit-core = { path = "../nit-core" }
nit-games = { path = "../nit-games" }
nit-tui = { path = "../nit-tui" }
nit-utils = { path = "../nit-utils" }
