[package]
name = "nit"
version.workspace = true
description = "Terminal-native AI agent orchestrator with TUI"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

nit-core = { path = "../nit-core" }
nit-games = { path = "../nit-games" }
nit-tui = { path = "../nit-tui" }
nit-utils = { path = "../nit-utils" }
